--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-feature android:name="android.hardware.camera.any"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
         android:name=".QRCheckInApplication"
@@ -17,6 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QRCheckIn"
         tools:targetApi="31" >
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="qrchannel">
+        </meta-data>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -27,6 +35,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".FirebaseMessageReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"> </action>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
